; ModuleID = '/home/carl/AnghaBench/Craft/deps/glfw/src/extr_mach_time.c__glfwInitTimer.c'
source_filename = "/home/carl/AnghaBench/Craft/deps/glfw/src/extr_mach_time.c__glfwInitTimer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { double, i32 }
%struct.TYPE_6__ = type { double, i64 }

@_glfw = common dso_local global %struct.TYPE_7__ zeroinitializer, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @_glfwInitTimer() #0 {
  %1 = alloca %struct.TYPE_6__, align 8
  %2 = call i32 @mach_timebase_info(%struct.TYPE_6__* %1)
  %3 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %1, i32 0, i32 1
  %4 = load i64, i64* %3, align 8
  %5 = sitofp i64 %4 to double
  %6 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %1, i32 0, i32 0
  %7 = load double, double* %6, align 8
  %8 = fmul double %7, 1.000000e+09
  %9 = fdiv double %5, %8
  store double %9, double* getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @_glfw, i32 0, i32 0, i32 0), align 8
  %10 = call i32 (...) @getRawTime()
  store i32 %10, i32* getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @_glfw, i32 0, i32 0, i32 1), align 8
  ret void
}

declare dso_local i32 @mach_timebase_info(%struct.TYPE_6__*) #1

declare dso_local i32 @getRawTime(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
